Get user loaction and display it on google maps (lab-01 answer)

--- a/lab-01/index.html
+++ b/lab-01/index.html
@@ -7,7 +7,13 @@
 </head>
 
 <body>
+    <input type="button" id="getLocationBtn" value="Get my location">
+    <h1>Location on Google maps</h1>
+    <div id="map"></div>
 
-<script src="js/app.js"></script>
+    <script src="js/app.js"></script>
+    <script defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbiuWX4YbHRjyY5oeOA3EhIycBGxsJNJs&callback=initMap">
+    </script>
 </body>
 </html>
